--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 quote = "1.0.36"
-syn = "2.0.66"
+syn = {version = "2.0.66", features = ["full"]}
 
 [lib]
 proc-macro = true
