--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,11 @@ members = ["macros"]
 name = "strawberry_fields"
 version = "0.1.0"
 edition = "2021"
+description = "Consume, read, and mutate struct fields with an iterator-like api."
+license = "MIT"
+repository = "https://github.com/Jeremiah-Griffin/strawberry_fields"
+categories = ["data-structures"]
+keywords = ["fields", "iteration"]
 
 [dependencies]
 strawberry_fields_macros = {path = "macros", version = "0.1.0"}
